Update landing page. Remove legal.

--- a/index.html
+++ b/index.html
@@ -53,26 +53,17 @@
           >
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html#about"
-            >OM EMMA</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#about">OM EMMA</a>
         </li>
         <li>
-          <a class="main-nav-link cursor-pointer" href="index.html#contact"
-            >Kontakt</a
-          >
+          <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
 
-        <li>
-          <a class="main-nav-link cursor-pointer" href="sales-conditions.html"
+        <!-- <li>
+          <a class="main-nav-link cursor-pointer" href="#salesconditions"
             >Salgsbetingelser</a
           >
-        </li>
-        <li>
-          <a class="main-nav-link cursor-pointer" href="privacy-page.html"
-            >Personvern og vilkår</a
-          >
-        </li>
+        </li> -->
       </ul>
       <!-- NAV MENU: BIG SCREEN -->
       <ul
@@ -89,6 +80,12 @@
         <li>
           <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
+        <!-- 
+        <li>
+          <a class="main-nav-link cursor-pointer" href="#salesconditions"
+            >Salgsbetingelser</a
+          >
+        </li> -->
       </ul>
     </nav>
   </header>
@@ -98,7 +95,7 @@
       <!-- HERO SECTION -->
       <!-- --------------- -->
 
-      <section class="section container margin-LF-auto">
+      <section class="section gap-4-8 container margin-LF-auto">
         <article
           class="inner-section grid grid--2-cols align-self--center margin-LF-auto"
         >
@@ -240,10 +237,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guros lue</h3>
                       <p class="pattern-card-price">30.00 NOK</p>
-
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -264,10 +257,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Malins genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -289,9 +278,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guros genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -313,9 +299,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Fridas genser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -337,9 +320,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Evelinagenser</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -365,9 +345,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Guro´s sweater</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -389,9 +366,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Frida´s sweater</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -418,9 +392,6 @@
                     <section class="pattern-card-text-box grid grid--1-col">
                       <h3 class="pattern-card-heading">Evelinatröjan</h3>
                       <p class="pattern-card-price">60.00 NOK</p>
-                      <a class="add-cart" href="#">
-                        <i class="fa-solid fa-cart-plus add-cart-icon"></i>
-                      </a>
                     </section>
                   </a>
                 </article>
@@ -467,6 +438,133 @@
           <p class="ps align-items--center">* Feltet må fylles ut</p>
         </form>
       </section>
+
+      <!-- --------------- -->
+      <!-- PERSONVERN OG VILKÅR SECTION -->
+      <!-- --------------- -->
+      <!-- <section
+        id="salesconditions"
+        class="privacy-policy-section page-section container"
+      >
+        <section class="gap-3-2 section margin-LF-auto grid grid--2-cols">
+          <section class="section-left">
+            <h1 class="h2-heading heading-light page-heading font-size-3-6">
+              Salgsbetingelser
+            </h1>
+
+            <article class="page-text-box flex gap-6-4 flex-dir-column">
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary font-size-2-4">
+                  Mailopplysninger
+                </h2>
+                <p class="page-text-light font-size-1-6">
+                  Sørg alltid for å sjekke at du har oppgitt riktig mail. Dersom
+                  det er feil i mailadressen vil du ikke motta ordrebekreftelse
+                  eller oppskrift i PDF format.
+                </p>
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary font-size-2-4">
+                  Ordrebekreftelse
+                </h2>
+                <p class="page-text-light font-size-1-6">
+                  Du mottar ordrebekreftelse på oppgitt mailadresse kort tid
+                  etter kjøp. Ta kontakt på emmaelisabethknit@gmail.com dersom
+                  du ikke har mottat ordrebekreftelsen.
+                </p>
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">Betaling</h2>
+                <p class="page-text-light font-size-1-6">
+                  EMMA mottar online betalinger med Visa, Mastercard eller
+                  Vipps. Alle beløp på er ink. moms. Hjemmesiden bruker følgende
+                  valuta til prissetting: Norge - kroner (NOK).
+                </p>
+                
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">Levering</h2>
+                <p class="page-text-light font-size-1-6">
+                  Oppskrifter sendes som PDF-filer til din oppgitte mailadresse.
+                  Sørg for å fylle inn riktig.
+                </p>
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">
+                  Angrerett ved kjøp av oppskrifter
+                </h2>
+                <p class="page-text-light font-size-1-6">
+                  Kjøperen er ansvarlig for å legge riktig produkt i
+                  handlekurven når kjøpet gjennomføres. Kjøperen har ikke
+                  angrerett på PDF-filer kjøpt på hjemmeisden, da disse ikke kan
+                  returneres.
+                </p>
+              </section>
+            </article>
+          </section>
+
+          <section>
+            <h2 class="h2-heading heading-light page-heading font-size-3-6">
+              Personvern og vilkår
+            </h2>
+
+            <article class="page-text-box flex gap-6-4 flex-dir-column">
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">Personlige opplysninger</h2>
+                <p class="page-text-light font-size-1-6">
+                  EMMA selger ikke personlige opplysninger til andre. De er kun
+                  registrert i nettbutikkens kundekartotek. Du kan til enhver
+                  tid få slettet dine opplysninger. Kontakt
+                  <a
+                    class="link-light"
+                    href="mailto:emmaelisabethknit@gmail.com"
+                    >emmaelisabethknit@gmail.com</a
+                  >
+                  for sletting. Når du handler, registreres følgende
+                  opplysninger om deg:
+                </p>
+                <ul class="ul-list">
+                  <li class="list-item-light font-size-1-6">Navn</li>
+                  <li class="list-item-light font-size-1-6">Adresse</li>
+                  <li class="list-item-light font-size-1-6">Telefonnummer</li>
+                  <li class="list-item-light font-size-1-6">E-post adresse</li>
+                </ul>
+                <p class="page-text-light font-size-1-6">
+                  <br />Formålet med disse opplysningene er å kunne sende deg
+                  varene dine.Personlige opplysninger registrert hos EMMA
+                  oppbevares i 5 år, før de slettes. IT ansvarlig hos EMMA: Emma
+                  Elisbeth Høvik Eide <br /><br />
+                  Det hverken oppbevares eller transmitteres kundeopplysninger
+                  kryptert.
+                </p>
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">Cookies</h2>
+                <p class="page-text-light font-size-1-6">
+                  www.emmaelisabethknit.com benytter seg av cookies med et
+                  formål om å optimalisere hjemmesiden og dens funksjonalitet,
+                  og dermed gjøre alle besøk så enkle som overhode mulig for
+                  både deg, og andre.
+                </p>
+              </section>
+
+              <section class="text-box-item">
+                <h2 class="page-heading-secondary">Statistikk</h2>
+                <p class="page-text-light font-size-1-6">
+                  www.emmaelisabethknit.com benytter seg av statistikk med et
+                  formål om å optimalisere hjemmesiden, og få oversikt over
+                  antall besøkende.
+                </p>
+              </section>
+            </article>
+          </section>
+        </section>
+      </section> -->
     </main>
     <script src="/script.js"></script>
   </body>
