Add benefit section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,68 @@
       </section>
 
       <!-- --------------- -->
+      <!-- BENEFITS SECTION -->
+      <!-- --------------- -->
+      <section class="benefits-section margin-LF-auto container">
+        <article class="benefit-box margin-LF-auto grid grid--3-cols gap-3-2">
+          <figure class="benefit-item">
+            <i class="fa-regular fa-file-pdf benefit-icon"></i>
+            <h4 class="benefit-header">Digitale oppskrifter</h4>
+            <p class="benefit-text">PDF fil i A5 format</p>
+          </figure>
+
+          <figure class="benefit-item">
+            <i class="fa-regular fa-star-half-stroke benefit-icon"></i>
+            <h4 class="benefit-header">vanskelighetsgrader</h4>
+            <p class="benefit-text">Gradert fra nybegynner til erfaren</p>
+          </figure>
+
+          <figure class="benefit-item">
+            <i class="fa-solid fa-check-double benefit-icon"></i>
+            <h4 class="benefit-header">Teststrikket</h4>
+            <p class="benefit-text">
+              Teststrikket av flere uavhengige personer med ulike
+              strikkeferdigheter
+            </p>
+          </figure>
+        </article>
+      </section>
+
+      <!-- --------------- -->
+      <!-- ABOUT EMMA SECTION -->
+      <!-- --------------- -->
+      <section id="about" class="section container margin-LF-auto">
+        <article
+          class="inner-section grid grid--2-cols align-self--center margin-LF-auto"
+        >
+          <section>
+            <h2 class="page-heading h2-heading font-size-4-8">Om Emma</h2>
+            <p class="page-text font-size-1-6">
+              Hei, Jeg er Emma Elisabeth! <br />
+              <br />
+              Jeg er 29 år og kvinnen bak merket EMMA, som lager oppskrifter på
+              moderne strikkeplagg. <br />
+              <br />
+              Mine strikkekunnskaper startet i det små når jeg som liten pike
+              fikk lære om rette og vrange masker av min mor. Det var nok til å
+              lage lange, varme skjerf. <br />
+              Det er først i voksen alder at jeg har tatt opp strikking igjen og
+              lært meg alt jeg kan. Takket være youtube har jeg blitt en erfaren
+              strikker!<br /><br />
+            </p>
+            <p class="page-text font-size-1-6">
+              I min portofolie finner du plagg i ulike strikkefastheter og
+              vanskelighetsgrader. Målet er at det skal være oppskrifter for
+              alle, både nybegynnere og erfarene strikkere.
+            </p>
+          </section>
+          <figure class="section-img-box">
+            <img src="/Img/Instagram/2.jpg" />
+          </figure>
+        </article>
+      </section>
+
+      <!-- --------------- -->
       <!-- INSTAGRAM SECTION -->
       <!-- --------------- -->
       <section class="instagram-section margin-LF-auto container">
@@ -157,39 +219,6 @@
         </section>
       </section>
 
-      <!-- --------------- -->
-      <!-- ABOUT EMMA SECTION -->
-      <!-- --------------- -->
-      <section id="about" class="section container margin-LF-auto">
-        <article
-          class="inner-section grid grid--2-cols align-self--center margin-LF-auto"
-        >
-          <section>
-            <h2 class="page-heading h2-heading font-size-4-8">Om Emma</h2>
-            <p class="page-text font-size-1-6">
-              Hei, Jeg er Emma Elisabeth! <br />
-              <br />
-              Jeg er 29 år og kvinnen bak merket EMMA, som lager oppskrifter på
-              moderne strikkeplagg. <br />
-              <br />
-              Mine strikkekunnskaper startet i det små når jeg som liten pike
-              fikk lære om rette og vrange masker av min mor. Det var nok til å
-              lage lange, varme skjerf. <br />
-              Det er først i voksen alder at jeg har tatt opp strikking igjen og
-              lært meg alt jeg kan. Takket være youtube har jeg blitt en erfaren
-              strikker!<br /><br />
-            </p>
-            <p class="page-text font-size-1-6">
-              I min portofolie finner du plagg i ulike strikkefastheter og
-              vanskelighetsgrader. Målet er at det skal være oppskrifter for
-              alle, både nybegynnere og erfarene strikkere.
-            </p>
-          </section>
-          <figure class="section-img-box">
-            <img src="/Img/Instagram/2.jpg" />
-          </figure>
-        </article>
-      </section>
       <!-- --------------- -->
       <!-- PATTERN SECTION -->
       <!-- --------------- -->
