--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
       <!-- CONTACT FORM SECTION -->
       <!-- -------------------- -->
       <section
-        class="page-section container align-items--center flex flex-dir-column"
+        class="contact-section page-section container align-items--center flex flex-dir-column"
         id="contact"
       >
-        <h2 class="page-heading h2-heading font-size-4-8">Ta Kontakt</h2>
+        <h2 class="contact-heading h2-heading font-size-4-8">Ta Kontakt</h2>
         <form method="get" class="contact-form flex flex-dir-column">
           <input
             class="input-field"
@@ -462,138 +462,11 @@
             required
           ></textarea>
 
-          <button value="submit" class="btn btn--contact">Send</button>
+          <button value="submit" class="btn--contact">Send</button>
 
           <p class="ps align-items--center">* Feltet må fylles ut</p>
         </form>
       </section>
-
-      <!-- --------------- -->
-      <!-- PERSONVERN OG VILKÅR SECTION -->
-      <!-- --------------- -->
-      <!-- <section
-        id="salesconditions"
-        class="privacy-policy-section page-section container"
-      >
-        <section class="gap-3-2 section margin-LF-auto grid grid--2-cols">
-          <section class="section-left">
-            <h1 class="h2-heading heading-light page-heading font-size-3-6">
-              Salgsbetingelser
-            </h1>
-
-            <article class="page-text-box flex gap-6-4 flex-dir-column">
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary font-size-2-4">
-                  Mailopplysninger
-                </h2>
-                <p class="page-text-light font-size-1-6">
-                  Sørg alltid for å sjekke at du har oppgitt riktig mail. Dersom
-                  det er feil i mailadressen vil du ikke motta ordrebekreftelse
-                  eller oppskrift i PDF format.
-                </p>
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary font-size-2-4">
-                  Ordrebekreftelse
-                </h2>
-                <p class="page-text-light font-size-1-6">
-                  Du mottar ordrebekreftelse på oppgitt mailadresse kort tid
-                  etter kjøp. Ta kontakt på emmaelisabethknit@gmail.com dersom
-                  du ikke har mottat ordrebekreftelsen.
-                </p>
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">Betaling</h2>
-                <p class="page-text-light font-size-1-6">
-                  EMMA mottar online betalinger med Visa, Mastercard eller
-                  Vipps. Alle beløp på er ink. moms. Hjemmesiden bruker følgende
-                  valuta til prissetting: Norge - kroner (NOK).
-                </p>
-                
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">Levering</h2>
-                <p class="page-text-light font-size-1-6">
-                  Oppskrifter sendes som PDF-filer til din oppgitte mailadresse.
-                  Sørg for å fylle inn riktig.
-                </p>
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">
-                  Angrerett ved kjøp av oppskrifter
-                </h2>
-                <p class="page-text-light font-size-1-6">
-                  Kjøperen er ansvarlig for å legge riktig produkt i
-                  handlekurven når kjøpet gjennomføres. Kjøperen har ikke
-                  angrerett på PDF-filer kjøpt på hjemmeisden, da disse ikke kan
-                  returneres.
-                </p>
-              </section>
-            </article>
-          </section>
-
-          <section>
-            <h2 class="h2-heading heading-light page-heading font-size-3-6">
-              Personvern og vilkår
-            </h2>
-
-            <article class="page-text-box flex gap-6-4 flex-dir-column">
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">Personlige opplysninger</h2>
-                <p class="page-text-light font-size-1-6">
-                  EMMA selger ikke personlige opplysninger til andre. De er kun
-                  registrert i nettbutikkens kundekartotek. Du kan til enhver
-                  tid få slettet dine opplysninger. Kontakt
-                  <a
-                    class="link-light"
-                    href="mailto:emmaelisabethknit@gmail.com"
-                    >emmaelisabethknit@gmail.com</a
-                  >
-                  for sletting. Når du handler, registreres følgende
-                  opplysninger om deg:
-                </p>
-                <ul class="ul-list">
-                  <li class="list-item-light font-size-1-6">Navn</li>
-                  <li class="list-item-light font-size-1-6">Adresse</li>
-                  <li class="list-item-light font-size-1-6">Telefonnummer</li>
-                  <li class="list-item-light font-size-1-6">E-post adresse</li>
-                </ul>
-                <p class="page-text-light font-size-1-6">
-                  <br />Formålet med disse opplysningene er å kunne sende deg
-                  varene dine.Personlige opplysninger registrert hos EMMA
-                  oppbevares i 5 år, før de slettes. IT ansvarlig hos EMMA: Emma
-                  Elisbeth Høvik Eide <br /><br />
-                  Det hverken oppbevares eller transmitteres kundeopplysninger
-                  kryptert.
-                </p>
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">Cookies</h2>
-                <p class="page-text-light font-size-1-6">
-                  www.emmaelisabethknit.com benytter seg av cookies med et
-                  formål om å optimalisere hjemmesiden og dens funksjonalitet,
-                  og dermed gjøre alle besøk så enkle som overhode mulig for
-                  både deg, og andre.
-                </p>
-              </section>
-
-              <section class="text-box-item">
-                <h2 class="page-heading-secondary">Statistikk</h2>
-                <p class="page-text-light font-size-1-6">
-                  www.emmaelisabethknit.com benytter seg av statistikk med et
-                  formål om å optimalisere hjemmesiden, og få oversikt over
-                  antall besøkende.
-                </p>
-              </section>
-            </article>
-          </section>
-        </section>
-      </section> -->
     </main>
     <script src="/script.js"></script>
   </body>
