Add ps text bottom pattern section

--- a/index.html
+++ b/index.html
@@ -426,6 +426,9 @@
                 </article>
               </section>
             </section>
+            <p class="pattern-text--ps">
+              Alle oppskrifter kjøpes gjennom Ravelry.com
+            </p>
           </section>
         </section>
       </section>
