Add image to about section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- --------------- -->
       <section id="about" class="section container margin-LF-auto">
         <article
-          class="inner-section grid grid--2-cols align-self--center margin-LF-auto"
+          class="about-section inner-section grid align-self--center margin-LF-auto"
         >
           <section>
             <h2 class="page-heading h2-heading font-size-4-8">Om Emma</h2>
@@ -175,7 +175,7 @@
             </p>
           </section>
           <figure class="section-img-box">
-            <img src="/Img/Instagram/2.jpg" />
+            <img src="/Img/emma.jpg" />
           </figure>
         </article>
       </section>
