Update about section grid column

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- --------------- -->
       <section id="about" class="section container margin-LF-auto">
         <article
-          class="about-section inner-section grid align-self--center margin-LF-auto"
+          class="about-section inner-section grid grid--2-cols align-self--center margin-LF-auto"
         >
           <section>
             <h2 class="page-heading h2-heading font-size-4-8">Om Emma</h2>
