Add media queries landing page

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
 
       <section class="section gap-4-8 container margin-LF-auto">
         <article
-          class="inner-section grid grid--2-cols align-self--center margin-LF-auto"
+          class="hero-section inner-section grid grid--2-cols align-self--center margin-LF-auto"
         >
-          <figure class="section-img-box">
+          <figure class="hero-img section-img-box">
             <img
               alt="woman wearing a white beanie"
               src="img/guros-lue/gsnyhet.svg"
@@ -109,7 +109,7 @@
             <p class="hero-sticker">Nyhet</p>
             <h1 class="hero-heading font-size-12-1">Guros lue</h1>
             <a
-              class="btn font-size-1-6 cursor-pointer"
+              class="btn-hero btn font-size-1-6 cursor-pointer"
               href="pattern-page/guros-lue.html"
             >
               Se mer
@@ -124,23 +124,23 @@
       <section class="benefits-section margin-LF-auto container">
         <article class="benefit-box margin-LF-auto grid grid--3-cols gap-3-2">
           <figure class="benefit-item">
-            <i class="fa-regular fa-file-pdf benefit-icon"></i>
-            <h4 class="benefit-header">Digitale oppskrifter</h4>
-            <p class="benefit-text">PDF fil i A5 format</p>
-          </figure>
-
-          <figure class="benefit-item">
-            <i class="fa-regular fa-star-half-stroke benefit-icon"></i>
-            <h4 class="benefit-header">vanskelighetsgrader</h4>
-            <p class="benefit-text">Gradert fra nybegynner til erfaren</p>
-          </figure>
-
-          <figure class="benefit-item">
             <i class="fa-solid fa-check-double benefit-icon"></i>
             <h4 class="benefit-header">Teststrikket</h4>
             <p class="benefit-text">
               Teststrikket av flere uavhengige personer med ulike
               strikkeferdigheter
+            </p>
+          </figure>
+          <figure class="benefit-item">
+            <i class="fa-regular fa-file-pdf benefit-icon"></i>
+            <h4 class="benefit-header">Digitale oppskrifter</h4>
+            <p class="benefit-text">PDF fil i A5 format</p>
+          </figure>
+          <figure class="benefit-item">
+            <i class="fa-regular fa-star-half-stroke benefit-icon"></i>
+            <h4 class="benefit-header">Gradert</h4>
+            <p class="benefit-text">
+              Vanskelighetsgrader fra nybegynner til erfaren
             </p>
           </figure>
         </article>
@@ -153,7 +153,7 @@
         <article
           class="about-section inner-section grid grid--2-cols align-self--center margin-LF-auto"
         >
-          <section>
+          <section class="about-text-section">
             <h2 class="page-heading h2-heading font-size-4-8">Om Emma</h2>
             <p class="page-text font-size-1-6">
               Hei, Jeg er Emma Elisabeth! <br />
@@ -168,7 +168,7 @@
               lært meg alt jeg kan. Takket være youtube har jeg blitt en erfaren
               strikker!<br /><br />
             </p>
-            <p class="page-text font-size-1-6">
+            <p class="page-text page-text-2 font-size-1-6">
               I min portofolie finner du plagg i ulike strikkefastheter og
               vanskelighetsgrader. Målet er at det skal være oppskrifter for
               alle, både nybegynnere og erfarene strikkere.
