--- a/pattern-page/fridas-genser.html
+++ b/pattern-page/fridas-genser.html
@@ -59,11 +59,6 @@
           <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
 
-        <!-- <li>
-          <a class="main-nav-link cursor-pointer" href="#salesconditions"
-            >Salgsbetingelser</a
-          >
-        </li> -->
       </ul>
       <!-- NAV MENU: BIG SCREEN -->
       <ul
@@ -80,12 +75,8 @@
         <li>
           <a class="main-nav-link cursor-pointer" href="#contact">Kontakt</a>
         </li>
-        <!-- 
-        <li>
-          <a class="main-nav-link cursor-pointer" href="#salesconditions"
-            >Salgsbetingelser</a
-          >
-        </li> -->
+        
+       
       </ul>
     </nav>
   </header>
@@ -94,11 +85,11 @@
     <!-- ---------------- -->
 
     <main class="main-section">
-      <div class="page-section">
+      <article class="page-section">
         <p class="sticker">Norsk</p>
         <h1 class="page-heading">Fridas genser</h1>
-        <div class="pattern-grid">
-          <div class="pattern-img-section">
+        <section class="pattern-grid">
+          <article class="pattern-img-section">
             <div class="pattern-img-main">
               <img class="main-img" src="/Img/Fridas-genser/19.jpg" />
             </div>
@@ -108,8 +99,8 @@
               <img class="pattern-img" src="/Img/Fridas-genser/17.jpg" />
               <img class="pattern-img" src="/Img/Fridas-genser/18.jpg" />
             </div>
-          </div>
-          <div class="pattern-text pattern-description">
+          </article>
+          <article class="pattern-text pattern-description">
             <h3 class="text-heading">Beskrivelse</h3>
             <p class="description">
               Fridagenser strikkes ovenfra og ned, i glattstrikk med vridde
@@ -127,8 +118,8 @@
               <i class="fa-solid fa-cart-plus add-cart-icon--btn"></i>
               Legg i handlekurv
             </button>
-          </div>
-          <div class="pattern-text pattern-info">
+          </article>
+          <article class="pattern-text pattern-info">
             <h3 class="text-heading">Info</h3>
             <p class="description">
               <span>Størrelse:</span> XS (S) M (L) XL (2XL)<br /><br />
@@ -152,9 +143,9 @@
               >
               110 (115) 120 (125) 135 (138) cm
             </p>
-          </div>
-        </div>
-      </div>
+          </article>
+        </section>
+      </article>
     </main>
   </body>
   <!-- --------------- -->
